--- a/app/src/main/res/layout/activity_recetas.xml
+++ b/app/src/main/res/layout/activity_recetas.xml
@@ -16,6 +16,15 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ListView
+        android:id="@+id/listViewRecetas"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbarRecetas" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatBtnRecetas"
         android:layout_width="wrap_content"
