Finalizada actividad Guardar Recetas
Se ha creado la clase para crear y guardar los Pdf, asi como los métodos para guardar las recetas nuevas en la base de datos.
Tambien se ha corregido la forma en que se leen los Pdf en el visor, pues la forma es distinta cuando son desde la carpeta Assets a cuando se han guardado dentro de la APP

--- a/app/src/main/res/layout/activity_agregar_receta.xml
+++ b/app/src/main/res/layout/activity_agregar_receta.xml
@@ -97,7 +97,7 @@
                 android:ems="10"
                 android:gravity="bottom"
                 android:hint="Descripción"
-                android:inputType="textMultiLine|textPersonName"
+                android:inputType="textMultiLine|textCapSentences"
                 android:textSize="24sp" />
 
         </LinearLayout>
