--- a/app/src/main/res/menu/menu_navigation_activity.xml
+++ b/app/src/main/res/menu/menu_navigation_activity.xml
@@ -3,17 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/itemBuscar"
+        android:icon="@drawable/ic_search_black_24dp"
+        android:title="Buscar"
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/itemFiltrarCategorias"
         android:icon="@drawable/ic_tune_white"
         android:title="FiltrarCategorias"
         app:showAsAction="always" />
-    <item
-        android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:title="Buscar"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always"
-        app:queryHint="hint"
-        app:iconifiedByDefault="false"/>
 
 </menu>
