--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
         app:layout_constraintVertical_bias="0.769" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txvRegistro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
