--- a/app/src/main/res/layout/activity_agregar_receta.xml
+++ b/app/src/main/res/layout/activity_agregar_receta.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
+        android:elevation="10dp"
         android:minHeight="?attr/actionBarSize"
         android:paddingRight="20dp"
         android:theme="?attr/actionBarTheme"
