--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -39,9 +39,10 @@
 
             <ImageView
                 android:id="@+id/imgUser"
-                android:layout_width="140dp"
-                android:layout_height="137dp"
-                app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp" />
+                android:layout_width="291dp"
+                android:layout_height="260dp"
+                android:layout_marginBottom="20dp"
+                app:srcCompat="@drawable/ic_person_black_24dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/txilNick"
