--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -53,6 +53,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieNick"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_person_black_24dp"
@@ -122,6 +123,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieFecha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_date_range_black_24dp"
