--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -50,7 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Nick de Usuario">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/txieNick"
@@ -58,7 +59,6 @@
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_person_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Nick de Usuario"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -69,14 +69,14 @@
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
                 android:textColorHint="@color/colorPrimary"
-                app:passwordToggleEnabled="true">
+                app:passwordToggleEnabled="true"
+                android:hint="Contraseña">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Contraseña"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -86,14 +86,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Nombre">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_account_box_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Nombre"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -103,14 +103,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Apellidos">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_account_box_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Apellidos"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -120,7 +120,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Fecha de Nacimiento">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/txieFecha"
@@ -129,7 +130,6 @@
                     android:drawableLeft="@drawable/ic_date_range_black_24dp"
                     android:drawablePadding="20dp"
                     android:focusable="false"
-                    android:hint="Fecha de Nacimiento"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -139,14 +139,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Correo electronico">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_email_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Correo electronico"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
 
@@ -156,14 +156,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Teléfono">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Teléfono"
                     android:inputType="phone"
                     android:singleLine="true" />
             </android.support.design.widget.TextInputLayout>
@@ -174,14 +174,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingBottom="10dp"
-                android:textColorHint="@color/colorPrimary">
+                android:textColorHint="@color/colorPrimary"
+                android:hint="Comentarios">
 
                 <android.support.design.widget.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_comment_black_24dp"
                     android:drawablePadding="20dp"
-                    android:hint="Comentarios"
                     android:singleLine="false" />
             </android.support.design.widget.TextInputLayout>
 
