--- a/app/src/main/res/layout/activity_visor_pdf.xml
+++ b/app/src/main/res/layout/activity_visor_pdf.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
+            android:elevation="10dp"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme" />
 
