--- a/app/src/main/res/layout/fragment_datos_usuario.xml
+++ b/app/src/main/res/layout/fragment_datos_usuario.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,24 +8,26 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="30dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="30dp"
+            android:paddingRight="20dp"
+            android:paddingBottom="30dp">
 
             <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/profile_image"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:layout_marginBottom="15dp"
+                android:elevation="5dp"
                 android:src="@drawable/ic_account_box_black_24dp"
-                app:civ_border_color="#FF000000"
+                app:civ_border_color="@color/colorPrimary"
                 app:civ_border_width="2dp" />
 
             <android.support.design.widget.TextInputLayout
@@ -56,6 +59,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieNombre"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_account_box_black_24dp"
@@ -74,6 +78,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieApellidos"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_account_box_black_24dp"
@@ -111,6 +116,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieCorreo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_email_black_24dp"
@@ -129,6 +135,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieTlf"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_phone_android_black_24dp"
@@ -148,6 +155,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieFechaCreacion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_date_range_black_24dp"
@@ -166,6 +174,7 @@
                 android:textColorHint="@color/colorPrimary">
 
                 <android.support.design.widget.TextInputEditText
+                    android:id="@+id/txieComentarios"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@drawable/ic_comment_black_24dp"
