--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -37,12 +37,15 @@
             android:paddingRight="20dp"
             android:paddingBottom="30dp">
 
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/imgUser"
-                android:layout_width="291dp"
-                android:layout_height="260dp"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
                 android:layout_marginBottom="20dp"
-                app:srcCompat="@drawable/ic_person_black_24dp" />
+                android:elevation="5dp"
+                android:src="@drawable/ic_person_black_24dp"
+                app:civ_border_color="@color/colorPrimary"
+                app:civ_border_width="2dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/txilNick"
