--- a/app/src/main/res/menu/menu_navigation_activity.xml
+++ b/app/src/main/res/menu/menu_navigation_activity.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/ic_search_black_24dp"
         android:title="Buscar"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always" />
+        app:showAsAction="always|collapseActionView" />
     <item
         android:id="@+id/itemFiltrarCategorias"
         android:icon="@drawable/ic_tune_white"
