Creadas imagenes de acción en el mapa
Se han creado las imagenes y los metodos para pusar las opciones disponibles para usar sobre los usuarios en el mapa.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#FFC107</color>
     <color name="colorPrimaryDark">#FFA000</color>
     <color name="colorAccent">#FF5722</color>
-    <color name="colorAccentSuave">#ff8a50</color>
+    <color name="colorAccentSuave">#FF8A50</color>
     <color name="colorPrimaryLight">#FFECB3</color>
     <color name="colorIcons">#212121</color>
     <color name="colorPrimaryText">#212121</color>
