--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -43,7 +43,7 @@
                 android:layout_height="250dp"
                 android:layout_marginBottom="20dp"
                 android:elevation="5dp"
-                android:src="@drawable/ic_person_black_24dp"
+                android:src="@drawable/profile"
                 app:civ_border_color="@color/colorPrimary"
                 app:civ_border_width="2dp" />
 
