--- a/app/src/main/res/layout/fragment_cocineros.xml
+++ b/app/src/main/res/layout/fragment_cocineros.xml
@@ -44,8 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/ic_account_box_black_24dp"
-                android:tint="@color/colorAccent" />
+                android:src="@drawable/profile" />
 
             <View
                 android:layout_width="1dp"
@@ -57,8 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/ic_sms_black_24dp"
-                android:tint="@color/colorAccent" />
+                android:src="@drawable/sms" />
 
             <View
                 android:layout_width="1dp"
@@ -70,8 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/ic_email_black_24dp"
-                android:tint="@color/colorAccent" />
+                android:src="@drawable/gmail" />
 
             <View
                 android:layout_width="1dp"
@@ -83,8 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/ic_call_black_24dp"
-                android:tint="@color/colorAccent" />
+                android:src="@drawable/call" />
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 
